[gd_scene load_steps=2 format=3 uid="uid://bqx8mta4q65ld"]

[ext_resource type="Script" uid="uid://htyvomkgt5lr" path="res://RewardSelectionDialog.gd" id="1_script"]

[node name="RewardSelectionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="RewardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -150.0
offset_right = 450.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="RewardContainer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -19.0
offset_top = -211.0
offset_right = 181.0
offset_bottom = -181.0
grow_horizontal = 2
text = "Choose Your Reward!"
horizontal_alignment = 1

[node name="LeftReward" type="Button" parent="RewardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -617.0
offset_top = -50.0
offset_right = -467.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Club Card"

[node name="MiddleReward" type="Button" parent="RewardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Equipment"

[node name="RightReward" type="Button" parent="RewardContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 421.0
offset_top = -50.0
offset_right = 571.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Action Card"
